--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
     "reset-css": "^5.0.1",
     "sass": "^1.49.9",
     "typescript": "^4.6.2",
