--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
     "reset-css": "^5.0.1",
+    "round-to": "^6.0.0",
     "sass": "^1.49.9",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
